# vs-ai-vision

./: .gitignore  CMakeLists.txt  README.md  pubspec.yaml  realtest.cpp  realtrain.cpp
example/: vs_ai_vision_example.dart
lib/: vs_ai_vision.dart  vs_ai_vision_example.dart
lib/src/: vs_ai_vision_base.dart
lib/src/svm/: CMakeLists.txt  predict.cpp  realtest.cpp  realtrain.cpp  svmtest.cpp  svmtrain.cpp  thresholddeterminer.cpp  train.cpp
lib/src/svm/build-android/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/src/svm/svmsamples/: CMakeLists.txt
lib/src/svm/utils/: descriptordeterminer.cpp  imagepreprocessing.cpp  imagepreprocessing.hpp  labelassigner.cpp  rectangledeterminer.cpp  svm.cpp
test/: vs_ai_vision_test.dart
